# basic-smart-contracts

./: .gitignore  README.md  basic-smart-contracts.cabal  cabal.project  cost.json  log.txt
app/: basic-minting-policy.hs  mint-if-ada-paid-to.hs  mint-if-token-paid-to.hs  owner-can-mint-policy.hs
doc/: building-the-basic-smart-contracts-repo.md  dapp-sample-lucid-if-lovelace-paid.md  dapp-sample-lucid-if-token-paid.md  dapp-sample-lucid-owner-can-mint.md  deploy-basic-minting-policy.md  deploy-if-lovelace-paid.md  deploy-if-token-paid.md  deploy-owner-can-mint-policy.md  installing-plutus.md  testing-cli-if-lovelace-paid.md  testing-cli-if-token-paid.md  testing-cli-owner-can-mint.md
smart-contracts/: mint-if-ada-paid-to-address-1-0.plutus
src/: BasicMintingPolicy.hs  IfLovelacePaidMintingPolicy.hs  IfTokenPaidMintingPolicy.hs  OwnerCanMintPolicy.hs
