Cabal-Version:      2.4
Name:               basic-smart-contracts
Version:            0.1.0.0
Author:             CENT
Maintainer:         developer@cent.stakepoolcentral.com
Build-Type:         Simple
Copyright:          © 2022 CENT
License:            MIT
License-files:      LICENSE

library
  hs-source-dirs:      src
  exposed-modules:     BasicMintingPolicy
                     , IfLovelacePaidMintingPolicy
                     , Utils
  build-depends:       aeson
                     , base ^>=4.14.1.0
                     , containers
                     , playground-common
                     , data-default
                     , cardano-api
                     , serialise
                     , bytestring
                     , plutus-contract
                     , plutus-ledger
                     , plutus-ledger-constraints
                     , plutus-tx-plugin
                     , plutus-tx
                     , text
                     , cardano-crypto-class
                     , cardano-ledger-core
                     , plutus-ledger-api
                     , freer-extras
  default-language:    Haskell2010
  ghc-options:         -Wall -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas -fno-strictness -fno-spec-constr -fno-specialise

executable token-name
  main-is: token-name.hs
  hs-source-dirs:      app
  ghc-options:         -Wall
  build-depends:       base ^>= 4.14.1.0
                     , basic-smart-contracts

executable basic-minting-policy
  main-is: basic-minting-policy.hs
  hs-source-dirs:      app
  ghc-options:         -Wall
  build-depends:       base ^>= 4.14.1.0
                     , basic-smart-contracts
                     , plutus-ledger

executable mint-if-paid-to
  main-is: mint-if-paid-to.hs
  hs-source-dirs:      app
  ghc-options:         -Wall
  build-depends:       base ^>= 4.14.1.0
                     , basic-smart-contracts
                     , plutus-ledger
                     , plutus-tx
